feat(user): 사용자 다중 역할(Multi-Role) 지원 - 역할변경 팝업 다중선택 및 메뉴 UNION 처리
- core_user_role 매핑 테이블 신규 도입 (Approach B, 다대다 사용자-역할 매핑)
  - core_user.ROLE 컬럼은 대표 역할 캐시로 유지 (하위호환)
  - V3.0.0 마이그레이션: 테이블 생성 + 기존 데이터 이전
- CoreUserRole 엔티티/리포지토리 신규 추가
- CoreUserService: changeRoles(다중역할 변경), getRolesByUserId(s) 추가
  - changeRole(단일)은 changeRoles로 위임하여 하위호환 유지
- CustomUserDetails/CustomUserDetailsService: JWT 인증 시 전체 역할로부터
  Spring Security authorities 구성 (다중 역할 인가 지원)
- MeResponse/UserResponse/IntegratedUserResponse: roles 배열 필드 추가
- CoreMenuService.getMenuTreeByRoles(): 여러 역할의 메뉴 UNION 반환
- CoreMenuController: /role/{role} 엔드포인트가 쉼표구분 다중역할 지원
- IntegratedUserController/-Service: PATCH .../role?role=A&role=B 다중 파라미터 지원
- MenuPermissionService.isAdmin(): core_user_role 매핑 테이블 조회로 변경
  (다중 역할 중 ROLE_ADMIN이 대표역할이 아니어도 정상 인식)
- 프런트엔드(index.html):
  - currentUserRoles()/hasAnyRole() 헬퍼 추가
  - loadUserMenus(): 다중 역할 메뉴 UNION 조회 + admin 체크 다중역할 대응
  - 역할변경 팝업: 단일 select → 체크박스 다중 선택 UI로 변경
  - enterApp/navigateToFirePage: fireweb_user에 roles 배열 및 다중역할
    기반 canManage 판정 반영
  - 대시보드 역할별 인원수, 사용자 목록/상세 역할뱃지, 역할 필터: 다중역할 대응
- sso-callback.html, EncDataController.java: SSO 로그인 경로도 다중역할
  기반 fireweb_user 구성으로 통일
- preview-server.js: 목업 서버도 다중역할 응답 shape(roles 배열) 및
  다중역할 메뉴 UNION, PATCH 다중 role 파라미터 반영

Refs: 사용자관리 역할변경 팝업 다중역할 지정 기능 + 메뉴표시 정합성 확보